--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     <section class="hero">
         <h1>NUTS - ВЗРЫВНОЙ ВКУС В КАЖДОЙ ПЛИТКЕ!</h1>
         <p>Попробуйте наш уникальный шоколад с хрустящими орехами и нежнейшей карамелью. Тот самый вкус, который заставит вас говорить "NUTS - это бомба!"</p>
-        <a href="#" class="cta-button">Попробовать сейчас</a>
+        <a href="https://mrramirez1.github.io/123/" class="cta-button">Попробовать сейчас</a>
     </section>
     
     <section class="products">
